<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/doacao"
        android:icon="@drawable/ic_baseline_invert_colors_24"
        android:title="@string/doar"/>

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/info"/>
    <item
        android:id="@+id/local"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/local"/>
    <item
        android:id="@+id/amigos"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/amigos"/>

</menu>