<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/nome_doador"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/nomeDoador"
        android:textSize="22dp"
        android:layout_gravity="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:fontFamily="sans-serif-black"
       >

    </TextView>


    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_doador"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:layout_gravity="start"
        android:drawableRight="@drawable/ic_baseline_person_24">

    </EditText>

    <TextView
        android:id="@+id/email"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/e_mail"
        android:textSize="22dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"

        android:fontFamily="sans-serif-black">

    >

    </TextView>


    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:drawableRight="@drawable/ic_baseline_alternate_email_24">
    </EditText>

    <TextView
        android:id="@+id/telefone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/telefone"
        android:textSize="22dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"

        android:fontFamily="sans-serif-black"
        >

    </TextView>


    <EditText
        android:id="@+id/edit_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone"
        android:fontFamily="sans-serif-black"
        android:layout_gravity="start"
        android:drawableRight="@drawable/ic_baseline_call_24">
    </EditText>
    <TextView
        android:id="@+id/centro"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/centro_de_doa_o"
        android:textSize="22dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"

        android:drawableRight="@drawable/ic_baseline_location_on_24"
        >

    </TextView>

    <Spinner
        android:id="@+id/centros"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/centros_itens">
    </Spinner>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/data_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
            android:text="@string/data_da_doa_o"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            >
        </Button>

        <TextView
            android:id="@+id/data_doacao"
            android:layout_below="@id/data_calendar"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_centerVertical="true"
            android:text="20 de fev 2015"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            >

        </TextView>

    </LinearLayout>



</LinearLayout>
